--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>
+﻿<html>
   <head>
     
 <meta charset="utf-8"/>
   </head>
   <body>
       <p>Tere mina olen Arnika Rästa </p>
-	   <img src="https://scontent.xx.fbcdn.net/v/t1.0-9/13700160_1173901089339715_4201040664747939513_n.jpg?oh=9825bc8ca84785b801ead7e524c6d0ef&oe=585E0C33"/>
+	   <img src="http://enos.itcollege.ee/~arasta/Pictures/IMGP9200.jpeg"/>
   </body>
 </html>
