--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ﻿<html>
-  <head>
-    
-<meta charset="utf-8"/>
+<head>
+    <meta charset="utf-8"/>
   </head>
   <body>
       <p>Tere mina olen Arnika Rästa </p>
-	   <img src="http://enos.itcollege.ee/~arasta/Pictures/IMGP9200.jpeg"/>
+	   <img src="http://enos.itcollege.ee/~arasta/pics/IMGP9200.jpeg"/>
   </body>
 </html>
