--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
+	<title>Koduleht</title>
     
 <meta charset="utf-8"/>
   </head>
   <body>
-      <p>Tere mina olen Arnika Rästa </p>
-	   <img src="https://scontent.xx.fbcdn.net/v/t1.0-9/13700160_1173901089339715_4201040664747939513_n.jpg?oh=9825bc8ca84785b801ead7e524c6d0ef&oe=585E0C33"/>
+      <p>Tere! Mina olen Arnika Rästa </p>
+	<img src="https://scontent.fhen1-1.fna.fbcdn.net/t31.0-8/s960x960/14444770_1230404660356024_1777531398273282509_o.jpg" alt="pilt"/>
   </body>
 </html>
