--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-﻿<html>
-<head>
-    <meta charset="utf-8"/>
+﻿<!DOCTYPE html>
+<html>
+  <head>
+	<title>Koduleht</title>
+    
+<meta charset="utf-8"/>
   </head>
   <body>
-      <p>Tere mina olen Arnika Rästa </p>
-	   <img src="http://enos.itcollege.ee/~arasta/pics/IMGP9200.jpeg"/>
+      <p>Tere! Mina olen Arnika Rästa </p>
+	<img src="https://scontent.fhen1-1.fna.fbcdn.net/t31.0-8/s960x960/14444770_1230404660356024_1777531398273282509_o.jpg" alt="pilt"/>
   </body>
 </html>
